--- a/src/translations/pl.json
+++ b/src/translations/pl.json
@@ -17,6 +17,18 @@
     "add-discount-button": "Użyj kodu",
     "save": "oszczędzasz",
     "go-to-payments": "Przejdź do płatności",
-    "remove-cart": "Wyczyść koszyk"
+    "remove-cart": "Wyczyść koszyk",
+    "about-header": "Dlaczego warto wybrać Phone Paradise?",
+    "about-text": "Phone Paradise to miejsce, w którym spełnią się Twoje marzenia o idealnym telefonie. Nasza firma od lat dostarcza najlepsze rozwiązania telekomunikacyjne, co czyni nas liderem branży. Oto dlaczego warto wybrać nasz sklep:",
+    "about-ul-first": "Szeroki wybór najnowszych modeli telefonów czołowych producentów.",
+    "about-ul-second": "Gwarantowana jakość i autentyczność każdego produktu – zero kompromisu w kwestii jakości.",
+    "about-ul-third": "Ekspresowa dostawa, dzięki czemu możesz szybko i łatwo cieszyć się swoim nowym telefonem bez opóźnień.",
+    "our": "Nasza",
+    "customer-support": "obsługa klienta",
+    "customer-available": "jest dostępna 24 godziny na dobę, 7 dni w tygodniu – zawsze możesz na nas liczyć.",
+    "about-ul-fifth": "Dbamy o każdego klienta, zapewniając kompleksowe wsparcie i zadowolenie.",
+    "satisfied customers": "zadowolonych klientów",
+    "orders realized": "zamówień zrealizowanych",
+    "times page visited": "razy strona odwiedzona"
   }
 }
