Add next pack of translation

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -27,8 +27,26 @@
     "customer-support": "customer support",
     "customer-available": "is available 24/7 – you can always count on us.",
     "about-ul-fifth": " We care for every customer, providing comprehensive support and satisfaction.",
-    "satisfied customers": "satisfied customers",
-    "orders realized": "orders realized",
-    "times page visited": "times page visited"
+    "satisfied-customers": "satisfied customers",
+    "orders-realized": "orders realized",
+    "times-page-visited": "times page visited",
+    "bad-url": "Your url adress is incorrect, back to main site or you will be redirected for",
+    "seconds": "seconds",
+    "back-to-main": "Back to main site",
+    "contact-us": "Contact us:",
+    "phone-contact": "You can contact with our consultants at number",
+    "mail-contact": "Another way to contact us is email adress. Mail:",
+    "fb-contact": "When you have loose questions about project ",
+    "click-here": "click here",
+    "why-us": "Why us?",
+    "contact": "Contact",
+    "login": "Login",
+    "payment-redirect": "You will be redirected to your bank's website shortly. To proceed, click the button below or wait a few seconds",
+    "to-payment": "To payment",
+    "payment-confirm": "If payment process is done click YES. Otherwise click NO.",
+    "yes": "YES",
+    "no": "NO",
+    "back-to-cart": "Back to cart",
+    "payment-declined": "Something went wrong with payment. Back to cart and try again."
   }
 }
