--- a/src/translations/pl.json
+++ b/src/translations/pl.json
@@ -27,8 +27,26 @@
     "customer-support": "obsługa klienta",
     "customer-available": "jest dostępna 24 godziny na dobę, 7 dni w tygodniu – zawsze możesz na nas liczyć.",
     "about-ul-fifth": "Dbamy o każdego klienta, zapewniając kompleksowe wsparcie i zadowolenie.",
-    "satisfied customers": "zadowolonych klientów",
-    "orders realized": "zamówień zrealizowanych",
-    "times page visited": "razy strona odwiedzona"
+    "satisfied-customers": "zadowolonych klientów",
+    "orders-realized": "zamówień zrealizowanych",
+    "times-page-visited": "razy strona odwiedzona",
+    "bad-url": " Twój adres URL jest nieprawidłowy. Wróć do strony głównej, w przeciwnym razie nastąpi przekierowanie za",
+    "seconds": "sekund",
+    "back-to-main": "Powrót do głównej",
+    "contact-us": "Kontakt z nami:",
+    "phone-contact": "Możesz się skontaktować z naszymi konsultantami pod numerem",
+    "mail-contact": "Inną formą kontaktu z nami jest adres e-mail. Poczta:",
+    "fb-contact": "Jeżeli masz luźne pytania dotyczące projektu ",
+    "click-here": "kilknij tutaj",
+    "why-us": "Dlaczego my?",
+    "contact": "Kontakt",
+    "login": "Zaloguj",
+    "payment-redirect": "Za chwilę nastąpi przekierowanie na stronę internetową Twojego banku. Aby kontynuować, kliknij przycisk poniżej lub poczekaj kilka sekund",
+    "to-payment": "Do płatności",
+    "payment-confirm": "Jeśli proces płatności został zakończony pomyślnie kliknij TAK. W przeciwnym razie kliknij NIE.",
+    "yes": "TAK",
+    "no": "NIE",
+    "back-to-cart": "Wróć do koszyka",
+    "payment-declined": "Coś poszło nie tak z płatnością. Wróć do koszyka i spróbuj ponownie."
   }
 }
