Next part of translate + fix register form

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -47,6 +47,28 @@
     "yes": "YES",
     "no": "NO",
     "back-to-cart": "Back to cart",
-    "payment-declined": "Something went wrong with payment. Back to cart and try again."
+    "payment-declined": "Something went wrong with payment. Back to cart and try again.",
+    "account-created": "Your account has been created.",
+    "account-created-thanks": "Thank you for creating an account. Now you can log in to your account.",
+    "sign-in": "Sign in",
+    "sign-to-account": "Sign in to your account",
+    "your-email": "Your email",
+    "email-not-exist": "Email not exist in database.",
+    "password": "Password",
+    "account-not-created": "Don’t have an account yet?",
+    "sign-up": "Sign up",
+    "loading": "Loading",
+    "sign-up-header": "Sign up your account",
+    "name": "Name",
+    "name-length": "Name must be longer than 4 characters.",
+    "invalid-characters": "Invalid characters.",
+    "name-taken": "Name is already taken.",
+    "invalid-email": "Invalid email format.",
+    "email-taken": "Email is already taken.",
+    "password-regex": "Password must contain at least one uppercase letter and one digit.",
+    "password-length": "Password is so short.",
+    "confirm-password": "Confirm password",
+    "password-different": "Both password are different.",
+    "account-exist": "Already you have account?"
   }
 }
