--- a/src/translations/pl.json
+++ b/src/translations/pl.json
@@ -47,6 +47,28 @@
     "yes": "TAK",
     "no": "NIE",
     "back-to-cart": "Wróć do koszyka",
-    "payment-declined": "Coś poszło nie tak z płatnością. Wróć do koszyka i spróbuj ponownie."
+    "payment-declined": "Coś poszło nie tak z płatnością. Wróć do koszyka i spróbuj ponownie.",
+    "account-created": "Twoje konto zostało utworzone.",
+    "account-created-thanks": "Dziękujemy za utworzenie konta. Teraz możesz zalogować się na swoje konto.",
+    "sign-in": "Zaloguj się",
+    "sign-to-account": "Zaloguj się do konta",
+    "your-email": "Twój email",
+    "email-not-exist": "Adres e-mail nie istnieje w bazie danych.",
+    "password": "Hasło",
+    "account-not-created": "Nie masz jeszcze konta?",
+    "sign-up": "Zarejestruj się",
+    "loading": "Ładowanie",
+    "sign-up-header": "Zarejestruj konto",
+    "name": "Nazwa",
+    "name-length": "Nazwa musi być dłuższa niż 4 znaki.",
+    "invalid-characters": "Nieprawidłowe znaki.",
+    "name-taken": "Nazwa jest zajęta.",
+    "invalid-email": "Nieprawidłowy email.",
+    "email-taken": "Email jest zajęty.",
+    "password-regex": "Hasło musi zawierać co najmniej jedną wielką literę i jedną cyfrę.",
+    "password-length": "Hasło jest zbyt krótkie.",
+    "confirm-password": "Powtórz hasło",
+    "password-different": "Obydwa hasła są różne.",
+    "account-exist": "Posiadasz już konto?"
   }
 }
