Next part of translation

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -37,6 +37,7 @@
     "phone-contact": "You can contact with our consultants at number",
     "mail-contact": "Another way to contact us is email adress. Mail:",
     "fb-contact": "When you have loose questions about project ",
+    "email-topic": "Assessment and comments on the project",
     "click-here": "click here",
     "why-us": "Why us?",
     "contact": "Contact",
@@ -68,7 +69,25 @@
     "password-regex": "Password must contain at least one uppercase letter and one digit.",
     "password-length": "Password is so short.",
     "confirm-password": "Confirm password",
+    "password-incorrect": "Password is incorrect.",
     "password-different": "Both password are different.",
-    "account-exist": "Already you have account?"
+    "account-exist": "Already you have account?",
+    "errorOccurred": "Error occurred:",
+    "unknownError": "Unknown error",
+    "main-header": "Welcome to Phone Paradise – Your Favorite Destination for the Phones. Explore a World of Innovation and Style. Shop Now!",
+    "sort-by": "Sort by:",
+    "default": "Default",
+    "price-ascending": "Price ascending",
+    "price-descending": "Price descending",
+    "date-release": "Date release",
+    "screen-size": "Screen size",
+    "actual-available": "Actual available",
+    "price-up": "Price up:",
+    "price-to": "Price to:",
+    "products-on-page": "Products on page:",
+    "screen": "screen",
+    "add-to-cart": "Add to cart",
+    "off-sale": "Off sale",
+    "pieces": "On stock: "
   }
 }
