--- a/src/translations/pl.json
+++ b/src/translations/pl.json
@@ -37,6 +37,7 @@
     "phone-contact": "Możesz się skontaktować z naszymi konsultantami pod numerem",
     "mail-contact": "Inną formą kontaktu z nami jest adres e-mail. Poczta:",
     "fb-contact": "Jeżeli masz luźne pytania dotyczące projektu ",
+    "email-topic": "Ocena i uwagi na temat projektu",
     "click-here": "kilknij tutaj",
     "why-us": "Dlaczego my?",
     "contact": "Kontakt",
@@ -67,8 +68,26 @@
     "email-taken": "Email jest zajęty.",
     "password-regex": "Hasło musi zawierać co najmniej jedną wielką literę i jedną cyfrę.",
     "password-length": "Hasło jest zbyt krótkie.",
+    "password-incorrect": "Podane hasło jest nieprawidłowe.",
     "confirm-password": "Powtórz hasło",
     "password-different": "Obydwa hasła są różne.",
-    "account-exist": "Posiadasz już konto?"
+    "account-exist": "Posiadasz już konto?",
+    "errorOccurred": "Wystąpił błąd:",
+    "unknownError": "Nieznany błąd",
+    "main-header": "Witamy w Phone Paradise – Twoim ulubionym miejscu dla telefonów. Poznaj świat innowacji i stylu. Kupuj teraz!",
+    "sort-by": "Sortuj poprzez:",
+    "default": "Domyślnie",
+    "price-ascending": "Cena rosnąco",
+    "price-descending": "Cena malejąco",
+    "date-release": "Data wydania",
+    "screen-size": "Rozmiar ekranu",
+    "actual-available": "Aktualnie dostępne",
+    "price-up": "Od:",
+    "price-to": "Do:",
+    "products-on-page": "Produktów na stronie:",
+    "screen": "wyświetlacz",
+    "add-to-cart": "Dodaj do koszyka",
+    "off-sale": "Wyprzedane",
+    "pieces": "Na stanie: "
   }
 }
