Add missed translation

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -63,6 +63,7 @@
     "name": "Name",
     "name-length": "Name must be longer than 4 characters.",
     "name-maxlength": "Name is so long.",
+    "test-account": "Test account",
     "invalid-characters": "Invalid characters.",
     "name-taken": "Name is already taken.",
     "invalid-email": "Invalid email format.",
