--- a/src/translations/pl.json
+++ b/src/translations/pl.json
@@ -56,6 +56,7 @@
     "your-email": "Twój email",
     "email-not-exist": "Adres e-mail nie istnieje w bazie danych.",
     "password": "Hasło",
+    "test-account": "Konto testowe",
     "account-not-created": "Nie masz jeszcze konta?",
     "sign-up": "Zarejestruj się",
     "loading": "Ładowanie",
